--- a/math/notes/env-notes.tex
+++ b/math/notes/env-notes.tex
@@ -105,6 +105,7 @@
 % Bibliography
 % Bibliography (https://www.contextgarden.net/Bibliography_mkiv)
 \usebtxdataset[../bibliographies/default.bib]
+\usebtxdataset[../bibliographies/logic.bib]
 \usebtxdataset[../bibliographies/number-theory.bib]
 \usebtxdataset[../bibliographies/combinatorics.bib]
 \usebtxdataset[../bibliographies/Itô.bib]
