--- a/math/notes/prd-logic/prd-logic.tex
+++ b/math/notes/prd-logic/prd-logic.tex
@@ -22,7 +22,7 @@
 \setvariables [document] [fontsize=12pt]
 
 % Document specific information
-\setvariables [document] [title={Foundations of Mathematics}]
+\setvariables [document] [title={Mathematical Logic}]
 \setvariables [document] [subtitle={Notes and Exercises}]
 \setvariables [document] [course={PHIL 4010}]
 \setvariables [document] [author={Sudip Sinha}]
@@ -48,12 +48,8 @@
 
 \startbodymatter
 
-	\startpart[title={Study: Set theory notes}, reference=prt:notes-set-theory]
-		\component  cmp-notes-set-theory
-	\stoppart
-
-	\startpart[title={Book Study: Enderton (Logic)}, reference=prt:book-Enderton-logic]
-		\component  cmp-book-Enderton-logic
+	\startpart[title={PHIL 4010 Exercises}, reference=prt:exercises]
+		\component  cmp-exercises
 	\stoppart
 
 	% \startpart[title={modules}, reference=prt:modules]
