--- a/math/talks/env-talks.tex
+++ b/math/talks/env-talks.tex
@@ -54,6 +54,7 @@
 
 % Bibliography (https://www.contextgarden.net/Bibliography_mkiv)
 \usebtxdataset[../bibliographies/default.bib]
+\usebtxdataset[../bibliographies/logic.bib]
 \usebtxdataset[../bibliographies/number-theory.bib]
 \usebtxdataset[../bibliographies/combinatorics.bib]
 \usebtxdataset[../bibliographies/Itô.bib]
@@ -249,7 +250,7 @@
 	closesymbol={□}]
 
 \defineenumeration [solution] [mathematicalstatement] [
-	text=Solution,
+	text=Solution.,
 	% title=no,
 	number=no,
 	headstyle=italic,    % This is for "Solution"
