* PHIL 4010: HW2 final

--- a/math/notes/prd-logic/cmp-exercises.tex
+++ b/math/notes/prd-logic/cmp-exercises.tex
@@ -11,10 +11,10 @@
 		For any set \m{A}, we have \m{A ∩ ∅ = ∅}.
 	\stopexercise
 	\startsolution
-		\bold{(\m{⊆})}
+		\bold{(\m{⊆})}\qquad
 		Let \m{x ∈ A ∩ ∅} be arbitrary. This means \m{x ∈ A} and \m{x ∈ ∅}. But there does not exist \m{x ∈ ∅}. Therefore, the statement is vacuously true.
 
-		\bold{(\m{⊇})}
+		\bold{(\m{⊇})}\qquad
 		Now, let \m{x ∈ ∅} be arbitrary. Again, since there does not exist \m{x ∈ ∅}, the statement vacuously true.
 	\stopsolution
 
@@ -22,10 +22,10 @@
 		For any sets \m{A} and \m{B}, if \m{A ⊆ B}, then \m{A ∪ B = B}.
 	\stopexercise
 	\startsolution
-		\bold{(\m{⊆})}
+		\bold{(\m{⊆})}\qquad
 		Let \m{x ∈ A ∪ B} be arbitrary. This means \m{x ∈ A} or \m{x ∈ B}. If \m{x ∈ A}, then by the condition \m{A ⊆ B}, we obtain \m{x ∈ B}. Therefore, in either case, \m{x ∈ B}.
 
-		\bold{(\m{⊇})}
+		\bold{(\m{⊇})}\qquad
 		Let \m{x ∈ B} be arbitrary. Therefore, \m{x ∈ A} or \m{x ∈ B}. Hence \m{x ∈ A ∪ B}.
 	\stopsolution
 
@@ -34,7 +34,7 @@
 
 \startexercises [title={\getvariable{document}{author}  \hfill  \getvariable{document}{course}  \hfill  2019-09-24}]
 
-	\emph{Note:} We shall say that a truth assigment \m{v} satisfies \m{Σ} if it satisfies every member of \m{Σ}.
+	\emph{Note:} We shall say that a truth assigment \m{v} satisfies \m{Σ} iff it satisfies every member of \m{Σ}.
 	
 	% \startexercise [title={\cite[short][EndertonLogic2001], 1.2.1}]
 	\startexercise [title={Enderton, 1.2.1}]
@@ -47,7 +47,7 @@
 	\startsolution
 		We have to show that \m{α ⊭ β} and \m{β ⊭ α}.
 
-		\bold{(\m{α ⊭ β})}
+		\bold{(\m{α ⊭ β})}\qquad
 		For this, it suffices to produce a truth assignment \m{v} such that \m{\bar{v}(α) = ⊤} and \m{\bar{v}(β) = ⊥}.
 
 		Consider \m{v} such that \m{v(A) = v(B) = ⊥} and \m{v(C) = ⊤}. Under \m{\bar{v}}, we get exactly what is required as is shown in the computations below. (Here the truth assignments by \m{\bar{v}} is denoted under each symbol.)
@@ -60,7 +60,7 @@
 			\NC  ⊥    \NC    ⊥  \NC  ⊥  \NC      \NC     \NC       \NC  ⊥  \NC       \NC      \NC  ⊥  \NC       \NC      \NC  ⊥  \NC   ⊥  \NC  ⊤      \NR
 		\stopalign  \stopformula
 
-		\bold{(\m{β ⊭ α})}
+		\bold{(\m{β ⊭ α})}\qquad
 		Again, it suffices to produce \m{v} such that \m{\bar{v}(β) = ⊤} and \m{\bar{v}(α) = ⊥}.
 
 		Consider \m{v} such that \m{v(A) = v(B) = v(C) = ⊥}. Under \m{\bar{v}}, we get exactly what is required as is shown in the computations below.
@@ -74,6 +74,7 @@
 		\stopalign  \stopformula
 	\stopsolution
 
+	\page
 	% \startexercise [title={\cite[short][EndertonLogic2001], 1.2.4 (a)}]
 	\startexercise [title={Enderton, 1.2.4(a)}]
 		Show that \m{Σ ∪ \bcrl[α] ⊨ β} iff \m{Σ ⊨ (α → β)}.
@@ -81,68 +82,84 @@
 	\startsolution
 		We show each direction separately.
 
-		\bold{(\m{⟹})}
+		\bold{(\m{⟹})}\qquad
 		% We show this by contrapositive. Suppose \m{Σ ⊭ (α → β)}. Since
 		We suppose \m{Σ ∪ \bcrl[α] ⊨ β}. Let \m{v} be an arbitrary truth assignment that satisfies \m{Σ}. We have to show that \m{v} satisfies \m{(α → β)}. We have two cases.
-		\startitemize[i, joinedup]
+		\startitemize [i, joinedup]
 			\item  \m{\bar{v}(α) = ⊤}: In this case, from the supposition, we get \m{\bar{v}(β) = ⊤}. So \m{\bar{v}(α → β) = ⊤}.
 			\item  \m{\bar{v}(α) = ⊥}: In this case, \m{\bar{v}(α → β) = ⊤} since the antecedent is \m{⊥}.
 		\stopitemize
 		Since \m{v} was arbitrary, we have \m{Σ ⊨ (α → β)}.
 
-		\bold{(\m{⟸})}
+		\bold{(\m{⟸})}\qquad
 		We suppose \m{Σ ⊨ (α → β)}. Let \m{v} be an arbitrary truth assignment that satisfies \m{Σ ∪ \bcrl[α]}. We have to show that \m{v} satisfies \m{β}. Since \m{v} satisfies \m{Σ ∪ \bcrl[α]}, it satisfies \m{Σ}. Therefore, by our supposition, \m{v} satisfies \m{(α → β)}. Now, since \m{v} satisfies \m{α}, it can only be that \m{v} satisfies \m{β}, since the only other way the material implication can be satisfied is when \m{v} does not satisfies \m{α}. This proves our claim.
 	\stopsolution
 
 	% \startexercise [title={\cite[short][EndertonLogic2001], 1.2.5}]
 	\startexercise [title={Enderton, 1.2.5}]
 		Prove or refute each of the following assertions:
-		\startitemize[a, joinedup]
+		\startitemize [a, joinedup]
 			\item  If either \m{Σ ⊨ α} or \m{Σ ⊨ β}, then \m{Σ ⊨ (α ∨ β)}.
 			\item  If \m{Σ ⊨ (α ∨ β)}, then either \m{Σ ⊨ α} or \m{Σ ⊨ β}.
 		\stopitemize
 	\stopexercise
 	\startsolution
-		\startitemize[a]
-			\item  (\bold{⊤})
-
+		\startitemize [a]
+			\item  (\bold{⊤})\qquad
 				There are two cases: \m{Σ ⊨ α} and \m{Σ ⊨ β}. Without loss of generality, we can assume that \m{Σ ⊨ α}, as the argument for other case is exactly the same. This means any arbitrary truth assignment \m{v} satisfying \m{Σ} also satisfies \m{α}. This implies \m{\bar{v}(α ∨ β) = ⊤} by the definition of extension of \m{\bar{v}} for \m{∨}.
 
-			\item  (\bold{⊥})
-
+			\item  (\bold{⊥})\qquad
 				We give a counterexample. Let \m{α} be a sentence symbol and \m{Σ = ∅}. Then it is always true that \m{⊨ (α ∨ (¬α))}. But it does not follow that \m{⊨ α} or \m{⊨ (¬α)}.
 
 				For an explicit example, consider two truth assignments \m{v_1} and \m{v_2}, such that \m{v_1(α) = ⊤} and \m{v_2(α) = ⊥}. In this case, \m{⊨ α} is not true since \m{v_2} does not satisfy \m{α}, and \m{⊨ (¬α)} is not true since \m{v_1} does not satisfy \m{(¬α)}.
 		\stopitemize
 	\stopsolution
 
+	\page
 	% \startexercise [title={\cite[short][EndertonLogic2001], 1.2.6}]
 	\startexercise [title={Enderton, 1.2.6}]
-		\startitemize[a, joinedup]
+		\startitemize [a, joinedup]
 
-			\item  Show that if \m{v_1} and \m{v_2} are truth assignments which agree on all the sentence symbols in the wff \m{α}, then \m{\bar{v}_1(α)} = \m{\bar{v}_2(α)}. Use the induction principle.
+			\item  Show that if \m{v_1} and \m{v_2} are truth assignments which agree on all the sentence symbols in the wff \m{α}, then \m{\bar{v}_1(α)} = \m{\bar{v}_2(α)}.
 			
 			\item  Let \m{S} be a set of sentence symbols that includes those in \m{Σ} and \m{τ} (and possibly more). Show that \m{Σ ⊨ τ} iff every truth assignment for \m{S} which satisfies every member of \m{Σ} also satisfies \m{τ}.
 
-				(This is an easy consequence of part (a). The point of part (b) is that we do not need to worry about getting the domain of a truth assignment exactly perfect, as long as it is big enough. For example, one option would be always to use truth assignments on the set of all sentence symbols. The drawback is that these are infinite objects, and there are a great many — uncountably many — of them.)
 		\stopitemize
 	\stopexercise
 	\startsolution
-		\startitemize[a]
-			\item[uniqueness]  Let \m{G} be set of all sentence symbols used in \m{α}, and let \m{B = \bcrl[ϕ \text{ wff}: \bar{v}_1(ϕ) = \bar{v}_2(ϕ)]}.
+		\startframedtext [width=0.8\makeupwidth, align={flushleft, nonhyphenated, stretch, verytolerant}, frame=off]
+		\startitemize [a]
 
-			Now, let \m{ϕ, ψ ∈ B} (arbitrary) and \m{⊡ ∈ \bcrl[∧, ∨, →, ↔]}. Since the rules for extension for \m{v_1} and \m{v_2} are the same, \m{\bar{v}_1(¬ ϕ) = \bar{v}_2(¬ ϕ)} and \m{\bar{v}_1(ϕ ⊡ ψ) = \bar{v}_2(ϕ ⊡ ψ)}. Hence \m{(¬ϕ), (ϕ ⊡ ψ) ∈ B}, that is, \m{B} is closed with respect to the formula building operations.
+			\item[uniqueness]
+				Let \m{G} be the set of sentence symbols used in \m{α}, and let \m{B = \bcrl[ϕ \text{ wff}: \bar{v}_1(ϕ) = \bar{v}_2(ϕ)]}. All we need to show is that \m{α ∈ B}.
 
-			Therefore, by the induction principle, \m{B} is the set generated by the formula building operations. So \m{α ∈ B}. Therefore, \m{\bar{v}_1(α)} = \m{\bar{v}_2(α)}.
+				Firstly, \m{G ⊆ B} since \m{v_1} and \m{v_2} agree on the sentence symbols used in \m{α}.
 
-			\item  Let \m{G} be the set of sentence symbols used in \m{Σ} and \m{τ}. Clearly, \m{G ⊆ S}. Now, \m{Σ ⊨ τ}
+				Secondly, let \m{ϕ, ψ ∈ B} (arbitrary), so \m{v_1} and \m{v_2} agree on \m{ϕ} and \m{ψ}. Let \m{⊡ ∈ \bcrl[∧, ∨, →, ↔]}. Since conditions 1–5 on page 20–21 are the same for \m{\bar{v}_1} and \m{\bar{v}_2}, we have \m{\bar{v}_1(¬ ϕ) = \bar{v}_2(¬ ϕ)} and \m{\bar{v}_1(ϕ ⊡ ψ) = \bar{v}_2(ϕ ⊡ ψ)}. Hence \m{(¬ϕ), (ϕ ⊡ ψ) ∈ B}, that is, \m{B} is closed with respect to the formula building operations.
 
-				⟺  Every \m{v} on \m{G} satisfies \m{Σ} and \m{τ}.
+				Therefore, by the induction principle, \m{B} is the set of \emph{all} wffs generated by the formula building operations. So \m{α ∈ B}, and we are done.
 
-				⟺  Every \m{v} on \m{S} satisfies \m{Σ} and \m{τ} [using Part (\in[uniqueness])].
+			\item  In this part, we use \m{v} to denote truth assignments and \quotation{\m{v} on a set} means \m{v} is defined on that set. Let \m{G} be the set of sentence symbols used in \m{Σ} and \m{τ}. Clearly, \m{G ⊆ S}.
+
+				We show each direction separately.
+
+				\bold{(\m{⟹})}\qquad
+				From the definition of tautological implication,
+				\startformula  \startalign[n=3]
+					\NC     \NC  Σ ⊨ τ  \NR
+					\NC  ⟺  \NC  (∀ v \text{ on } G) ((v \text{ satisfies } Σ) → (v \text{ satisfies } τ))  \NR
+					\NC  ⟹  \NC  (∀ v \text{ on } S) ((v \text{ satisfies } Σ) → (v \text{ satisfies } τ))  \NC  \text{[Part (\in[uniqueness])]}  \NR
+				\stopalign  \stopformula
 				
-				⟺  Every \m{v} on \m{S} satisfies every member of \m{Σ} also satisfies \m{τ}.
+				\bold{(\m{⟸})}\qquad
+				Since \m{Σ} and \m{τ} does not depend on any element of \m{S ∖ G}, restricting the definition of \m{v} from \m{S} to \m{G} will not change anything on \m{Σ} and \m{τ}. Therefore,
+				\startformula  \startalign
+					\NC     \NC  (∀ v \text{ on } S) ((v \text{ satisfies } Σ) → (v \text{ satisfies } τ))  \NR
+					\NC  ⟹  \NC  (∀ v \text{ on } G) ((v \text{ satisfies } Σ) → (v \text{ satisfies } τ))  \NR
+					\NC  ⟺  \NC  Σ ⊨ τ  \NR
+				\stopalign  \stopformula
 		\stopitemize
+		\stopframedtext
 	\stopsolution
 
 \stopexercises
