--- a/math/notes/prd-logic/prd-logic.tex
+++ b/math/notes/prd-logic/prd-logic.tex
@@ -48,9 +48,9 @@
 
 \startbodymatter
 
-	\startpart[title={PHIL 4010 Exercises}, reference=prt:exercises]
+	% \startpart[title={PHIL 4010 Exercises}, reference=prt:exercises]
 		\component  cmp-exercises
-	\stoppart
+	% \stoppart
 
 	% \startpart[title={modules}, reference=prt:modules]
 	% 	\component  cmp-modules
