--- a/math/talks/env-talks.tex
+++ b/math/talks/env-talks.tex
@@ -109,6 +109,7 @@
 \def \brnd[#arguments]{\delim[#arguments][(][)]}
 \def \bcrl[#arguments]{\delim[#arguments][\{][\}]}
 \def \bsqr[#arguments]{\delim[#arguments][[][]]}
+\def \bngl[#arguments]{\delim[#arguments][⟨][⟩]}
 
 % Commonly used delimiters
 \def \inn[#arguments]{\delim[#arguments][⟨][⟩]}
